--- a/index.html
+++ b/index.html
@@ -43,5 +43,45 @@
 <iframe src="https://www.youtube.com/embed/4y5-sP0sO8Q?si=Bwkig0WzcDrlHdlH" frameborder="0" width="100%" height="500"></iframe>
 <!--fin iframe-->
 <a href="https://www.google.com">abrir link</a>
+<table>
+    <tr>
+        <th>col1</th>
+        <th>col2</th>
+        <th>col3</th>
+    </tr>
+    <tr>
+        <th>col1</th>
+        <th>col2</th>
+        <th>col3</th>
+    </tr>
+    <tr>
+        <th>col1</th>
+        <th>col2</th>
+        <th>col3</th>
+    </tr>
+</table>
+<form method="post" action="">
+
+    <label for="">nombre</label>
+    <input type="text" id="name" placeholder="nombre">
+    <label for="">Password</label>
+    <input type="password" placeholder="password">
+    <label for="">fecha de nacimiento</label>
+    <input type="date">
+    <input type="checkbox" name="" id="">
+    <label for="">activo</label>
+    <textarea name="description" id="" cols="30" rows="10"></textarea>
+
+    <button>enviar</button>
+</form>
+<form action="" method="post">
+    <select name="" id="">
+        <option disabled selected>elige una opcion</option>
+        <option value="1">opcion 1</option>
+        <option value="2">opcion 2</option>
+        <option value="3">opcion 3</option>
+    </select>
+    <input type="submit" value="enviar">
+</form>
 </body>
 </html>
